# qmlib

./: .gitignore  75953.terrain  Cargo.toml  README.md
app/: Cargo.toml
app/benches/: bench_write_tiff.rs
app/src/: export_csv.rs  export_geotiff.rs  export_kml.rs  export_svg.rs  export_vec.rs  tile_export.rs  tile_info.rs  tile_raster.rs  tiles_at_point.rs
compute_shader/: Cargo.toml
compute_shader/src/: bvh.rs  lib.rs  main.rs  tile.rs
compute_shader_interface/: Cargo.toml  build.rs
compute_shader_interface/src/: gpu_runner.rs  rasteriser.rs
lib/: Cargo.toml
lib/benches/: interpolator.rs  interpolator_tiff.rs
lib/src/: csv_writer.rs  geometry.rs  interpolator.rs  interpolator_gpu.rs  kml_writer.rs  qmlib.code-workspace  quantized_mesh.rs  quantized_mesh_tile.rs  raster.rs  raster_gpu.rs  svg_writer.rs  test_utils.rs  tiff_writer.rs  tile.rs  twodm_writer.rs
python-plots/: plot.ipynb  plot_mesh_latlon.ipynb  plot_wgs84.ipynb  triangles.csv  vertices_ecef.csv  vertices_latlon.csv
src/: dump_tri.rs  geo.rs  quantized_mesh.rs  quantizedmeshdump.rs
test/data/a/: layer.json
test/data/a/15/59489/: 9692.terrain
test/data/a/18/470053/: 77832.terrain
