[package]
name = "quantizedmeshdump"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "0.14.0"
map_3d = "0.1.5"
wasm-bindgen = "0.2"
itertools = "0.13.0"

[[bin]]
name = "quantizedmeshdump"
path = "src/quantizedmeshdump.rs"

[lib]
name = "quantizedmeshdump"
path = "src/quantizedmeshdump.rs"
crate-type = ["cdylib", "rlib"]