# qmlib/app/Cargo.toml
[package]
name = "qmlib_apps"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_write_tiff"
harness = false

[dependencies]
qmlib = { path = "../lib" }  # Local path to the library
binrw = "0.14.0"
nalgebra = "0.33.0"

[[bin]]
name = "tile_info"
path = "src/tile_info.rs"

[[bin]]
name = "tiles_at_point"
path = "src/tiles_at_point.rs"

[[bin]]
name = "export_kml"
path = "src/export_kml.rs"

[[bin]]
name = "export_svg"
path = "src/export_svg.rs"

[[bin]]
name = "export_geotiff"
path = "src/export_geotiff.rs"