# qmlib/app/Cargo.toml
[package]
name = "qmlib_apps"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
qmlib = { path = "../lib" }  # Local path to the library
binrw = "0.14.0"
nalgebra = "0.33.0"
geo = "0.28.0"
clap = "4.5.23"

[features]

[[bin]]
name = "tile_info"
path = "src/tile_info.rs"

[[bin]]
name = "tiles_at_point"
path = "src/tiles_at_point.rs"

[[bin]]
name = "export_geotiff"
path = "src/export_geotiff.rs"

[[bin]]
name = "export_csv"
path = "src/export_csv.rs"

[[bin]]
name = "export_vec"
path = "src/export_vec.rs"