[package]
name = "qmlib"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
binrw = "0.14.0"
glam = "0.29.0"
libc = "0.2.158"
nalgebra = "0.33.0"
num-traits = "0.2.19"
rayon = "1.10.0"
tiff = "0.9.1"    
compute_shader_interface = { path = "../../rust-gpu-software-rasteriser/compute_shader_interface" }  # Local path to the library
compute_shader= { path = "../../rust-gpu-software-rasteriser/compute_shader" }  # Local path to the library

async-std = "1.13.0"

[lib]
name = "qmlib"
path = "src/quantized_mesh.rs"
crate-type = ["dylib"]

[[bench]]
name = "interpolator_tiff"
harness = false

[[bench]]
name = "interpolator"
harness = false
